# dragon_rl

./: .gitignore  README.md
dragon_ws/src/dragon_agent/: CMakeLists.txt  controller_plugins.xml  package.xml
dragon_ws/src/dragon_agent/include/dragon_agent/: dragon_controller_test.h  dragon_leg_plugin.h  gps_leg_plugin.h
dragon_ws/src/dragon_agent/include/gps/proto/: gps.pb.cc  gps.pb.h
dragon_ws/src/dragon_agent/launch/: leg_agent_gazebo.launch  leg_agent_only_controller.launch
dragon_ws/src/dragon_agent/scripts/: check_jac.py  issue_pos.py  run_train.py
dragon_ws/src/dragon_agent/src/: dragon_controller_test.cpp  dragon_leg_plugin.cpp  gps_leg_plugin.cpp
dragon_ws/src/dragon_description/: CMakeLists.txt  joint_limits  joints  links  package.xml
dragon_ws/src/dragon_description/launch/: dragon.launch  dragon_upload.launch  spawn_dragon.launch  upload_single_leg.launch
dragon_ws/src/dragon_description/meshes/: framework.stl  main1.stl  main1a.stl  main1m.stl  main1n.stl  main2.stl  main2a.stl  main2m.stl  main2n.stl  z_axis.stl
dragon_ws/src/dragon_description/src/: urdf_test.cpp
dragon_ws/src/dragon_description/urdf/: common.gazebo.xacro  dragon.urdf  leg.transmission.xacro  leg.urdf.xacro  single_leg.urdf  single_leg.urdf.xacro  single_leg2.urdf.xacro
dragon_ws/src/dragon_driver/: CMakeLists.txt  package.xml
dragon_ws/src/dragon_driver/config/: controllers.yaml  robot_specification.xml
dragon_ws/src/dragon_driver/include/dragon_driver/: qr_driver.h  qr_ros_wrapper.h  robot_parser.h  ros_wrapper.h
dragon_ws/src/dragon_driver/include/dragon_driver/hardware_interface/: actuator.h  encoder.h  qr_hardware_interface.h  robot_state_base.h
dragon_ws/src/dragon_driver/include/dragon_driver/propagate_interface/: propagate_imp_base.h  propagate_imp_pcan.h
dragon_ws/src/dragon_driver/launch/: dragon_driver.launch  robot_specification.xml
dragon_ws/src/dragon_driver/src/: main.cpp  propagate_imp_pcan.cpp  qr_driver.cpp  qr_ros_wrapper.cpp  robot_parser.cpp  ros_wrapper.cpp  test.cpp  test_qr_driver.cpp
dragon_ws/src/dragon_gazebo/: CMakeLists.txt  package.xml
dragon_ws/src/dragon_gazebo/controller/: leg_controller_dragon.yaml  single_leg_controller.yaml
dragon_ws/src/dragon_gazebo/launch/: controller_utils.launch  dragon_only_controllers.launch  dragon_only_gazebo.launch  single_leg_gazebo.launch
dragon_ws/src/dragon_gazebo/worlds/: dragon.world
dragon_ws/src/dragon_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dragon_ws/src/dragon_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  single_leg.srdf
dragon_ws/src/dragon_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  single_leg_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
dragon_ws/src/gps_agent_lib/: CMakeLists.txt  baxter_controller_plugins.xml  controller_plugins.xml  package.xml
dragon_ws/src/gps_agent_lib/include/gps/proto/: gps.pb.cc  gps.pb.h
dragon_ws/src/gps_agent_lib/include/gps_agent_lib/: baxterplugin.h  caffenncontroller.h  camerasensor.h  controller.h  encoderfilter.h  encodersensor.h  lingausscontroller.h  neuralnetworkcaffe.h  positioncontroller.h  pr2plugin.h  robotplugin.h  rostopicsensor.h  sensor.h  tfcontroller.h  trialcontroller.h
dragon_ws/src/gps_agent_lib/launch/: baxter_arm_controller.yaml  baxter_gazebo.launch  baxter_gazebo_no_controller.launch  baxter_only_controller.launch  pr2_gazebo.launch  pr2_only_controller.launch
dragon_ws/src/gps_agent_lib/src/: baxterplugin.cpp  caffenncontroller.cpp  camerasensor.cpp  controller.cpp  encoderfilter.cpp  encodersensor.cpp  lingausscontroller.cpp  neuralnetwork.cpp  neuralnetworkcaffe.cpp  positioncontroller.cpp  pr2plugin.cpp  robotplugin.cpp  rostopicsensor.cpp  sample.cpp  sensor.cpp  tfcontroller.cpp  trialcontroller.cpp  util.cpp
dragon_ws/src/leg_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dragon_ws/src/leg_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  single_leg.srdf
dragon_ws/src/leg_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rl_impl/: compile_proto.sh
rl_impl/experiments/baxter_lqr_example/: hyperparams.py  log.txt  target.npz
rl_impl/experiments/dragon_hopping_pi2_example/: hyperparams.py  log.txt
rl_impl/experiments/dragon_hopping_pr2_example/: log.txt
rl_impl/experiments/pr2_example/: log.txt
rl_impl/proto/: gps.proto
rl_impl/python/gps/agent/: config.py
rl_impl/python/gps/agent/ros/: agent_ros.py  ros_utils.py
rl_impl/python/gps/algorithm/cost/: config.py  cost_dz.py  cost_fk.py  cost_utils.py
rl_impl/python/gps/proto/: gps_pb2.py
rl_impl/python/gps_tests/tests_agent/: dragon_hyperparams.py  hyperparams.py
